--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,4 +3,5 @@ image: leskis/sadpod-dns-base:latest
 
 tasks:
   - name: start the exercise
-    command: sleep 5 && echo "booyah"
+    # get rid of the obvious evidence
+    command: echo "start the activity!"
